Fixed bug for serializing recipes

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@
 /WBS_Testing_01/WBS_Testing_01/obj/Debug/netcoreapp2.0/WBS_Testing_01.csproj.CoreCompileInputs.cache
 /WBS_Testing_01/WBS_Testing_01/obj/WBS_Testing_01.csproj.nuget.cache
 /WBS_Testing_01/WBS_Testing_01/obj/WBS_Testing_01.csproj.nuget.g.targets
+/WBS_Testing_01/WBS_Testing_01/bin/
+/WBS_Testing_01/WBS_Testing_01/obj/
